syntax = "proto3";

package Phantom.ProtoStore;

message MessageStoreTestMessage {
    string string_value = 1;
}
